<resources>
    <string name="app_name">TestTask</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="login_to_account">Login to Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name :</string>
    <string name="surname">Surname :</string>
    <string name="sex">Sex :</string>
    <string name="add_record">Add record</string>
    <string name="write_record_here">Write record here</string>
    <string name="home">Home</string>
    <string name="fill_all_fields">Fill all fields!</string>
    <string name="error">Error</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_something">Enter something</string>
    <string name="need_login">You need to login</string>
    <string name="successful">Successful</string>
</resources>
