<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueBackground"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp">

    <TextView
        android:id="@+id/email_text_view_fragment_user_profil"
        style="@style/styleForTextView"
        android:text="Email : " />

    <TextView
        android:id="@+id/email_value_text_view_fragment_user_profil"
        style="@style/styleForTextView"
        android:layout_toEndOf="@id/email_text_view_fragment_user_profil"
        android:layout_marginStart="8dp"
        tools:text="test.test@gmail.com" />

    <TextView
        android:id="@+id/name_text_view_fragment_user_profil"
        style="@style/styleForTextView"
        android:layout_below="@+id/email_text_view_fragment_user_profil"
        android:text="@string/name" />

    <TextView
        android:id="@+id/name_value_text_view_fragment_user_profil"
        style="@style/styleForTextView"
        android:layout_below="@+id/email_value_text_view_fragment_user_profil"
        android:layout_toEndOf="@+id/name_text_view_fragment_user_profil"
        android:layout_marginStart="8dp"
        tools:text="Andrey"/>

    <TextView
        android:id="@+id/surname_text_view_fragment_user_profil"
        style="@style/styleForTextView"
        android:layout_below="@+id/name_text_view_fragment_user_profil"
        android:text="@string/surname"/>

    <TextView
        android:id="@+id/surname_value_text_view_fragment_user_profil"
        style="@style/styleForTextView"
        android:layout_below="@+id/name_text_view_fragment_user_profil"
        android:layout_toEndOf="@id/surname_text_view_fragment_user_profil"
        android:layout_marginStart="8dp"
        tools:text="Molochko"/>

    <TextView
        android:id="@+id/sex_text_view_fragment_user_profil"
        style="@style/styleForTextView"
        android:layout_below="@+id/surname_text_view_fragment_user_profil"
        android:text="@string/sex" />

    <TextView
        android:id="@+id/sex_value_text_view_fragment_user_profil"
        style="@style/styleForTextView"
        android:layout_below="@+id/surname_text_view_fragment_user_profil"
        android:layout_toEndOf="@id/sex_text_view_fragment_user_profil"
        android:layout_marginStart="8dp"
        tools:text="Male"/>

    <TextView
        android:id="@+id/age_text_view_fragment_user_profil"
        style="@style/styleForTextView"
        android:layout_below="@id/sex_text_view_fragment_user_profil"
        android:text="Age : "/>

    <TextView
        android:id="@+id/age_value_text_view_fragment_user_profil"
        style="@style/styleForTextView"
        android:layout_below="@id/sex_text_view_fragment_user_profil"
        android:layout_toEndOf="@id/age_text_view_fragment_user_profil"
        android:layout_marginStart="8dp"
        tools:text="19"/>



</RelativeLayout>